fix caption spacing on work details

--- a/artist/mercury/assets/main.css
+++ b/artist/mercury/assets/main.css
@@ -193,7 +193,12 @@ h4 {
   clear: left;
 }
 
+.caption { 
+  margin: 11px 0; 
+}
+
 .caption p {
+  margin: 0;
   font-size: 11px;
   line-height: 14px;
   color: #666;
